--- a/termite/config
+++ b/termite/config
@@ -1,42 +1,43 @@
 [options]
-font=Droid Sans Mono 10
+font=Droid Sans Mono 11
 
 [colors]
 
 # special
-foreground      = #93a1a1
-foreground_bold = #93a1a1
-cursor          = #93a1a1
-background      = #001218
+foreground      = #d0d0d0
+foreground_bold = #d0d0d0
+cursor          = #d0d0d0
+background      = #151515
 
 # black
-color0  = #004658
-color8  = #657b83
+color0  = #151515
+color8  = #505050
 
 # red
-color1  = #dc322f
-color9  = #dc322f
+color1  = #ac4142
+color9  = #ac4142
 
 # green
-color2  = #859900
-color10 = #859900
+color2  = #90a959
+color10 = #90a959
 
 # yellow
-color3  = #f16516
-color11 = #f16516
+color3  = #f4bf75
+color11 = #f4bf75
 
 # blue
-color4  = #268bd2
-color12 = #268bd2
+color4  = #6a9fb5
+color12 = #6a9fb5
 
 # magenta
-color5  = #a12a46
-color13 = #a12a46
+color5  = #aa759f
+color13 = #aa759f
 
 # cyan
-color6  = #007f76
-color14 = #007f76
+color6  = #75b5aa
+color14 = #75b5aa
 
 # white
-color7  = #93a1a1
-color15 = #93a1a1
+color7  = #d0d0d0
+color15 = #f5f5f5
+
